--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -860,7 +860,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #18d26e;
+  color: #17cc6b;
   float: left;
   width: 44px;
   height: 44px;
@@ -877,7 +877,7 @@ section {
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 5px;
-  color: white;
+  color: white                                                                                                                                                ;
 }
 
 .contact .info p {
@@ -918,7 +918,7 @@ section {
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #18d26e;
+  background: #16d871;
   color: #fff;
 }
 
@@ -926,7 +926,7 @@ section {
   width: 100%;
   padding: 30px;
   background: #000000;
-  box-shadow: 0 0 24px 0 rgba(202, 196, 196, 0.12);
+  box-shadow: 0 0 24px 0                                                                            rgba(202, 196, 196, 0.12);
 }
 
 .contact .php-email-form .form-group {
