--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -241,7 +241,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/fondo2.jpg") top center;
+  background: url("../img/fondoGod.jpg") top center;
   background-size: cover;
   position: relative; /* Añade posición relativa al contenedor principal */
 }
